[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/enemy/Slime.gd" type="Script" id=2]
[ext_resource path="res://src/occollision/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/occollision/hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/occollision/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/occollision/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/stat/Stat.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/occollision/WanderController.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=24]
radius = 3.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 7.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=26]
radius = 7.0
height = 0.0

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hitbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitbox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=28]
resource_name = "dead"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitbox:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=29]
radius = 8.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )
MAX_SPEED = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 24 )
disabled = true

[node name="hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 25 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/dead = SubResource( 28 )

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 29 )

[node name="Stat" parent="." instance=ExtResource( 7 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 8 )]
walk_range = 40

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stat" to="." method="_on_Stat_no_health"]

[editable path="hitbox"]
[editable path="hurtbox"]
[editable path="PlayerDetection"]
[editable path="SoftCollision"]
